ADM-983 [backend]: fix sonar issues